# study-buddy

./: .gitignore  ANDROID_NATIVE_LIBRARY.md  JNI_INTEGRATION.md  MLC_LLM_INTEGRATION.md  MLC_LLM_TROUBLESHOOTING.md  NEXT_STEPS.md  README.md  TESTING_GUIDE.md  benchmark_models.py  build.gradle  build_and_install_model_lib.sh  build_android_lib.sh  build_android_model_lib.sh  build_app.sh  build_final_fix.sh  build_fixed_lib.sh  build_real_implementation.sh  build_rust_mlc_gemma.sh  check_symbols.sh  collect_debug_info.sh  compile_minimal_model_lib.sh  compile_model_for_android.py  create_dummy_gemma_lib.sh  create_gemma_model_library.sh  create_simple_gemma_lib.sh  download_gemma_model.sh  download_proper_mlc_libraries.sh  extract_mlc_libraries.sh  extract_model_for_debug.sh  extract_models.py  fix_jit_and_segfault.sh  fix_mallopt_issue.sh  gemma_model_lib.cpp  gradle.properties  manually_prepare_models.sh  mock_mlc_llm.cpp  model_tester.py  model_testing_README.md  optimize_gemma_model.sh  performance_monitoring.sh  (+7 more)
analysis/: gemma_library_symbols.txt  gemma_model_analysis.json
app/: build.gradle  build.gradle.kts  lint-baseline.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mlc-app-config.json  mlc-chat-config.json
app/src/main/assets/models/: create_models_directory.sh
app/src/main/assets/models/gemma2_2b_it/: config.json  mlc-chat-config.json  ndarray-cache.json
app/src/main/cpp/: CMakeLists.txt  generate_model_lib.cpp  mlc_create_chat_module.cpp  mlc_jni_wrapper.cpp  mlc_llm_jni.cpp  real_mlc_llm_jni.cpp  tvm_bridge.cpp
app/src/main/cpp/mlc_jni/: mlc_llm_jni.cpp
app/src/main/java/ai/mlc/mlcllm/: ChatModule.java  GenerationConfig.java  JSONFFIEngine.java
app/src/main/java/com/example/studybuddy/: MainActivity.kt  StudyBuddyApplication.kt
app/src/main/java/com/example/studybuddy/api/: LlmApiService.kt
app/src/main/java/com/example/studybuddy/ml/: DummyModel.kt  GemmaModelDownloader.kt  GemmaModelDownloaderTest.kt  LLMFactory.kt  LanguageModel.kt  MLCLLMService.kt  MlcLanguageModel.kt  MlcLlmBridge.kt  ModelDownloadService.kt  OcrProcessor.kt  OnDeviceImageClassifier.kt  OnDeviceLanguageModel.kt  SimpleMlcModel.kt  TVMBridge.kt  TVMLanguageModel.kt  TensorFlowModelManager.kt  TextRecognitionService.kt
app/src/main/java/com/example/studybuddy/mlc/: MLCLLMService.java  TVMBridge.java
app/src/main/java/com/example/studybuddy/ui/: CameraComponent.kt  ModelDownloadScreen.kt  ModelScreen.kt  PermissionsHandler.kt  SettingsScreen.kt
app/src/main/java/com/example/studybuddy/ui/components/: MLCLLMChatComponent.kt
app/src/main/java/com/example/studybuddy/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/studybuddy/utils/: ModelHelper.kt  PermissionUtils.kt
app/src/main/java/org/apache/tvm/: Module.java  TVMValue.java
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/studybuddy/: ModelTester.kt
docs/: DEVELOPMENT.md  STATUS.md  checksum_verification.md  download_resumption.md  gemma_download_plan.md  gemma_implementation_guide.md  gemma_implementation_verification.md  gemma_integration.md  gemma_library_analysis.md  real_gemma_implementation.md
gemma_debug/: run_with_debug.sh  set_device_props.sh
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_android_tvm.sh  prepare_libs_for_android.sh
stub_classes/: Device.java  Function.java
tools/: analyze_gemma_model.py
verification/: cpp_files.txt  filtered_cpp_files.txt  our_cpp_files.txt  source_files.txt
